<resources>
    <string name="app_name">LangLearner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_achievements">Achievements</string>
    <string name="menu_history">History</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_result_text">Answer</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_give_up">Give up</string>
    <string name="action_update">Update</string>
    <string name="action_submit">Submit</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="register_failed">Register failed</string>
    <string name="logout_failed">"Logout failed"</string>
    <string name="delete_history">Delete history</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="achievement_thumbnail">Achievement Thumbnail</string>
    <string name="langcard_thumbnail">LangCard Thumbnail</string>
    <string name="correct">Correct!</string>
    <string name="wrong">Wrong, it is %1$s.</string>
    <string name="prompt_select_native_language">Select your native language</string>
    <string name="prompt_select_selected_language">Select your learning language</string>
    <string name="prompt_name">Name</string>
    <string-array name="language_arrays">
        <item value="en">English</item>
        <item value="nb">Norsk</item>
        <item value="nl">Nederlands</item>
    </string-array>
</resources>
